--- a/src/pages/Home/styles.less
+++ b/src/pages/Home/styles.less
@@ -50,7 +50,7 @@
 }
 
 .bg {
-  background-color: #F1F9FF;
+  background-color: #f1f9ff;
 }
 
 .section {
@@ -115,6 +115,18 @@
     .accordion-body {
       padding-top: 8px;
     }
+  }
+}
+
+// sm
+@media screen and (min-width: 540px) {
+  .banner {
+    --banner-title-size: 48px;
+    --banner-desc-size: 16px;
+  }
+
+  .section {
+    --section-padding-y: 56px;
   }
 }
 
