--- a/src/components/Header/styles.less
+++ b/src/components/Header/styles.less
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: var(--header-height, 0px);
+  min-height: var(--header-height, 0);
 
   &.fixed-top {
     z-index: 300;
@@ -18,27 +18,32 @@
   --bs-navbar-hover-color: var(--color-primary-900);
   --bs-navbar-active-color: var(--color-primary-700);
   --bs-navbar-brand-padding-y: 0.5rem;
-  // --bs-navbar-brand-margin-end: 0;
+  --bs-navbar-brand-margin-end: 0;
   --bs-navbar-toggler-focus-width: 1px;
-  --bs-navbar-nav-link-padding-x: .5rem;
+  --bs-navbar-nav-link-padding-x: 0.5rem;
+
+  .offcanvas {
+    --bs-offcanvas-width: 80vw;
+  }
 
   .dropdown-menu {
-    --bs-dropdown-padding-x: .75rem;
-    --bs-dropdown-padding-y: .75rem;
-    --bs-dropdown-min-width: 21rem;
+    --bs-dropdown-padding-x: 0.75rem;
+    --bs-dropdown-padding-y: 0.75rem;
+    --bs-dropdown-min-width: 0; //21rem;
     --bs-dropdown-font-size: 14px;
     --bs-dropdown-color: var(--color-gray-900);
     --bs-dropdown-border-color: var(--color-gray-200);
-    --bs-dropdown-border-radius: .75rem;
-    --bs-dropdown-item-padding-x: 12px;
-    --bs-dropdown-item-padding-y: 12px;
+    --bs-dropdown-border-radius: 0.75rem;
+    --bs-dropdown-item-padding-x: 0.25rem;
+    --bs-dropdown-item-padding-y: 0.25rem;
     --bs-dropdown-link-color: var(--color-gray-900);
     --bs-dropdown-link-hover-color: var(--color-gray-900);
     --bs-dropdown-link-hover-bg: var(--color-gray-200);
     --bs-dropdown-link-active-color: var(--color-gray-900);
     --bs-dropdown-link-active-bg: var(--color-gray-300);
 
-    box-shadow: 0 12px 16px -4px rgba(16, 24, 40, 0.08), 0 4px 6px -2px rgba(16, 24, 40, 0.03);
+    box-shadow: 0 12px 16px -4px rgb(16 24 40 / 8%),
+      0 4px 6px -2px rgb(16 24 40 / 3%);
   }
 
   .dropdown-item {
@@ -59,14 +64,14 @@
 
   .btn-join {
     border: none;
-    background-image: linear-gradient(180deg, #687EC9 32.95%, #5B73C4 70.45%);
-    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    background-image: linear-gradient(180deg, #687ec9 32.95%, #5b73c4 70.45%);
+    box-shadow: 0 1px 2px rgb(16 24 40 / 5%);
   }
 }
 
 .navbar-nav {
   --bs-nav-link-color: var(--bs-navbar-color);
-  --bs-nav-link-font-size: .875rem;
+  --bs-nav-link-font-size: 0.875rem;
   --bs-nav-link-font-weight: 600;
   --bs-nav-link-line-height: 1.5;
 }
@@ -75,7 +80,7 @@
   line-height: var(--bs-nav-link-line-height);
 
   &:not(.active) {
-    opacity: .75;
+    opacity: 0.75;
   }
 }
 
@@ -85,7 +90,13 @@
   }
 
   .navbar {
-    --bs-navbar-nav-link-padding-x: .75rem;
+    --bs-navbar-nav-link-padding-x: 0.75rem;
+
+    .dropdown-menu {
+      --bs-dropdown-min-width: 20rem; // 21rem;
+      --bs-dropdown-item-padding-x: 0.75rem;
+      --bs-dropdown-item-padding-y: 0.75rem;
+    }
   }
 }
 
