--- a/src/components/Footer/styles.less
+++ b/src/components/Footer/styles.less
@@ -7,9 +7,9 @@
   padding-top: 64px;
   padding-bottom: 48px;
   color: var(--bs-color);
-  font-size: --footer-font-size;
+  font-size: var(--footer-font-size);
   line-height: 1.5;
-  background-color: #1D2939;
+  background-color: #1d2939;
 
   :global {
     dt {
@@ -17,7 +17,7 @@
       font-size: var(--footer-dt-font-size);
     }
 
-    dd > P {
+    dd > p {
       margin-bottom: 12px;
     }
   }
