--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -1,4 +1,4 @@
-@gray-50: #F9FAFB;
+@gray-50: #f9fafb;
 @gray-100: #f2f4f7;
 @gray-200: #eaecf0;
 @gray-300: #d0d5dd;
@@ -7,24 +7,25 @@
 @gray-600: #475467;
 @gray-700: #344054;
 @gray-900: #101828;
-@neutral-3: #EFEFEF;
+@neutral-3: #efefef;
 @neutral-4: #6f767e;
-@neutral-6: #272B30;
-@neutral-7: #1A1D1F;
-@primary-25: #F7FBFF;
-@primary-50: #F1F9FF;
-@primary-200: #9FD3FD;
-@primary-300: #9FD3FD;
-@primary-600: #2699FB;
-@primary-700: #1F87F4;
-@primary-800: #1875ED;
+@neutral-6: #272b30;
+@neutral-7: #1a1d1f;
+@primary-25: #f7fbff;
+@primary-50: #f1f9ff;
+@primary-200: #9fd3fd;
+@primary-300: #9fd3fd;
+@primary-600: #2699fb;
+@primary-700: #1f87f4;
+@primary-800: #1875ed;
 @primary-900: #093384;
 @green: #4bb227;
 @white: #ffffff;
-@primary: #1875ED;
-@danger: #F04438;
+@primary: #1875ed;
+@danger: #f04438;
 @success: #027a48;
 @secondary: @green;
+@warning: #dc6803;
 
 @text-main: @gray-900;
 @link-color: @primary-700;
