--- a/src/components/Header/styles.less
+++ b/src/components/Header/styles.less
@@ -1,129 +1,130 @@
-:root {
-  --header-height: 60px;
-}
-
 .header {
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-height: var(--header-height, 0);
 
-  &.fixed-top {
+  &.fixed-top,
+  &.sticky-top {
     z-index: 300;
   }
 }
 
 .navbar {
-  --bs-navbar-color: var(--color-primary-900);
+  --bs-navbar-color: var(--text-main);
   --bs-navbar-hover-color: var(--color-primary-900);
-  --bs-navbar-active-color: var(--color-primary-700);
-  --bs-navbar-brand-padding-y: 0;
-  --bs-navbar-brand-margin-end: 0;
+  --bs-navbar-active-color: var(--color-primary-900);
+  --bs-navbar-brand-padding-y: 0.5rem;
+  --bs-navbar-brand-margin-end: 0.5rem;
+  --bs-navbar-nav-link-padding-x: 0.75rem;
   --bs-navbar-toggler-focus-width: 1px;
-  --bs-navbar-nav-link-padding-x: 0.5rem;
 
-  .offcanvas {
-    --bs-offcanvas-width: 80vw;
-  }
-
-  .dropdown-menu {
-    --bs-dropdown-padding-x: 0.75rem;
-    --bs-dropdown-padding-y: 0.75rem;
-    --bs-dropdown-min-width: 0; //21rem;
-    --bs-dropdown-font-size: 14px;
-    --bs-dropdown-color: var(--color-gray-900);
-    --bs-dropdown-border-color: var(--color-gray-200);
-    --bs-dropdown-border-radius: 0.75rem;
-    --bs-dropdown-item-padding-x: 0.25rem;
-    --bs-dropdown-item-padding-y: 0.25rem;
-    --bs-dropdown-link-color: var(--color-gray-900);
-    --bs-dropdown-link-hover-color: var(--color-gray-900);
-    --bs-dropdown-link-hover-bg: var(--color-gray-200);
-    --bs-dropdown-link-active-color: var(--color-gray-900);
-    --bs-dropdown-link-active-bg: var(--color-gray-300);
+  .btn-connect {
+    --bs-btn-padding-x: 2rem;
+    --bs-btn-padding-y: 0.5rem;
+    --bs-btn-border-width: 0;
+    --bs-btn-font-size: 1rem;
+    --bs-btn-font-weight: 500;
+    --bs-btn-line-height: 1.5;
 
     box-shadow: 0 12px 16px -4px rgb(16 24 40 / 8%),
       0 4px 6px -2px rgb(16 24 40 / 3%);
   }
 
-  .dropdown-item {
-    display: flex;
-    margin-top: 0;
-    white-space: normal;
-    border-radius: var(--bs-dropdown-inner-border-radius);
+  .nav-link {
+    margin: var(--bs-nav-link-margin-y) var(--bs-nav-link-margin-x);
+    line-height: var(--bs-nav-link-line-height);
 
-    h5 {
-      font-size: 16px;
-      font-weight: 600;
-      line-height: 1.5;
+    &:not(.active) {
+      opacity: 0.7;
     }
-
-    + .dropdown-item {
-      margin-top: 8px;
-    }
-  }
-
-  .btn-join {
-    border: none;
-    background-image: linear-gradient(180deg, #687ec9 32.95%, #5b73c4 70.45%);
-    box-shadow: 0 1px 2px rgb(16 24 40 / 5%);
   }
 }
 
 .navbar-nav {
-  --bs-nav-link-padding-y: 1rem;
+  --bs-nav-link-margin-x: 0;
+  --bs-nav-link-margin-y: 0;
+  --bs-nav-link-padding-x: 0.75rem;
+  --bs-nav-link-padding-y: 0.5rem;
   --bs-nav-link-color: var(--bs-navbar-color);
-  --bs-nav-link-font-size: 0.875rem;
+  --bs-nav-link-font-size: 1rem;
   --bs-nav-link-font-weight: 600;
-  --bs-nav-link-line-height: 1.5;
+  --bs-nav-link-line-height: 1.5rem;
 }
 
-.nav-link {
-  line-height: var(--bs-nav-link-line-height);
-  outline: none;
+.assets-bar {
+  // background: rgb(255 255 255 / 65%);
+  // border: 1px solid #eaecf0;
+  // border-radius: 20px;
 
-  &:not(.active) {
-    opacity: 0.75;
+  &-amount {
+    font-size: 1rem;
+    font-weight: 500;
+  }
+
+  &-unit {
+    color: #6f767e;
+    font-size: 12px;
+    font-weight: 700;
+  }
+
+  &-extra {
+    margin: -1px;
+    display: flex;
+    min-width: 8.5rem;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5;
+    background: #fff;
+    border: 1px solid #eaecf0;
+    border-radius: 20px;
+
+    &.processing {
+      color: #fff;
+      background-color: var(--color-primary);
+      border-color: var(--color-primary);
+    }
+  }
+
+  .dropdown-menu {
+    // --bs-dropdown-padding-x: 12px;
+    // --bs-dropdown-padding-y: 12px;
+    // --bs-dropdown-min-width: 120px;
+    --bs-dropdown-spacer: 0;
+    --bs-dropdown-item-padding-x: 24px;
+    --bs-dropdown-item-padding-y: 12px;
+    --bs-dropdown-divider-bg: var(--bs-border-color);
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .navbar .navbar-brand > svg {
+    width: 86px;
+    height: 36px;
   }
 }
 
 @media screen and (min-width: 992px) {
-  :root {
-    --header-height: 80px;
-  }
-
   .navbar {
-    --bs-navbar-brand-padding-y: 0.5rem;
-    --bs-navbar-nav-link-padding-x: 0.75rem;
+    --bs-navbar-brand-margin-end: 2rem;
 
-    .dropdown-menu {
-      --bs-dropdown-min-width: 20rem; // 21rem;
-      --bs-dropdown-item-padding-x: 0.75rem;
-      --bs-dropdown-item-padding-y: 0.75rem;
-    }
-
-    .nav-item.dropdown {
-      > .dropdown-menu,
-      .dropdown-menu.show {
-        display: none;
-      }
-
-      &:hover > .dropdown-menu,
-      &:hover > .dropdown-menu.show {
-        display: block;
-        margin-top: 0;
-      }
+    .assets-bar {
+      position: absolute;
+      right: 0;
+      margin-right: calc(var(--bs-gutter-x) * 0.5);
     }
   }
 }
 
 @media screen and (min-width: 1200px) {
   .navbar {
-    --bs-navbar-brand-margin-end: 1rem;
-    --bs-navbar-nav-link-padding-x: 1rem;
+    --bs-navbar-brand-margin-end: 3rem;
   }
 
   .navbar-nav {
-    --bs-nav-link-font-size: 1rem;
+    --bs-nav-link-margin-x: 0.5rem;
+    --bs-nav-link-margin-y: 0;
   }
 }
