fix: fixed issues

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -35,6 +35,12 @@ a {
   padding-bottom: 0.01px;
 }
 
+@media screen and (min-width: 1400px) {
+  .container {
+    max-width: calc(1280px + var(--bs-gutter-x));
+  }
+}
+
 .ffi-layout-main {
   flex: 1 1 auto;
 }
